style fix for overflowing content on mobile

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a:visited {color:darkcyan}
 }
 
 #content {
-  width: 100em;
+  width: 100%;
 }
 
 
